Add content to slides

--- a/20150519-FP_chapter3/slides/ch3intro.html
+++ b/20150519-FP_chapter3/slides/ch3intro.html
@@ -19,26 +19,55 @@ h1, h2, h3 {
 <body>
   <textarea id="source">
 
-class: center, middle
+class: middle, center, inverse
 
 # Scala Study Group
 ## Chapter 3 - Functional Datatypes
+### Functional Datatypes
 ### Data Sharing
-
 ### Pattern Matching
 
 ---
+class: center
 
 # Functional Datastructures
 
-* Operated on by *pure functions*
-* Are by definition immutable
+#### Operated on by *pure functions*
+#### Are by definition immutable
+#### `Singly Linked List` in this chapter
 
 ---
+class: center
 
 # Data Sharing
-## 
-## 
+
+#### Operations must not modify List in-place
+#### Must therefore return a new List
+#### Does that lead to huge duplications?
+
+--
+
+### Nope!
+... data sharing content ...
+
+---
+class: center
+
+# Pattern Matching
+...Pattern Matching Content...
+
+---
+class: center
+
+# Today's Exercises
+
+GitHub repository for the Meetup:
+https://github.com/RheinMainScala/meetups
+
+
+Chapter 3 Exercise Skeletons:
+- [Francks fpinscala fork](https://github.com/RheinMainScala/fpinscala)
+- [My chapter 3 skeletons](https://github.com/RheinMainScala/meetups/tree/gh-pages/20150519-FP_chapter3/exercises)
 
   </textarea>
   <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
