--- a/20150519-FP_chapter3/slides/ch3intro.html
+++ b/20150519-FP_chapter3/slides/ch3intro.html
@@ -62,12 +62,11 @@ class: center
 # Today's Exercises
 
 GitHub repository for the Meetup:
-https://github.com/RheinMainScala/meetups
+https://github.com/RheinMainScala/meetups    
 
 
-Chapter 3 Exercise Skeletons:
-- [Francks fpinscala fork](https://github.com/RheinMainScala/fpinscala)
-- [My chapter 3 skeletons](https://github.com/RheinMainScala/meetups/tree/gh-pages/20150519-FP_chapter3/exercises)
+Chapter 3 Exercises, including Tests:
+https://github.com/RheinMainScala/fpinscala
 
   </textarea>
   <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
