--- a/20150519-FP_chapter3/slides/ch3intro.html
+++ b/20150519-FP_chapter3/slides/ch3intro.html
@@ -14,6 +14,19 @@ h1, h2, h3 {
   font-weight: normal;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+/* Two-column layout */
+.left-column {
+color: #777;
+width: 50%;
+float: left;
+}
+.left-column h2:last-of-type, .left-column h3:last-child {
+color: #000;
+}
+.right-column {
+width: 45%;
+float: right;
+}
 </style>
 </head>
 <body>
@@ -71,17 +84,71 @@ Parts are referenced by different "instances"
 - May lead to more efficient implementations
 
 ---
+layout: false
 
 # Pattern Matching
-...Pattern Matching Content...
+similiar to a `switch` statement..
 
+--
+
+.. but much more powerful !
+
+
+.left-column[
 ```scala
-def tellMe(i: Int): String = i match {
+def tellMeScala(i: Int): String = i match {
   case 1 => "one"
   case 2 => "two"
   case _ => "dunno"
 }
 ```
+]
+.right-column[
+```java
+String tellMeJava(int i) {
+  String result = "";
+  switch (i) {
+    case 1:  result = "one";
+             break;
+    case 2:  result = "two";
+             break;
+    default: result = "dunno";
+             break;
+  }
+  return result;
+}
+```
+]
+
+---
+#Pattern Matching
+
+- use literals to **filter** inputs
+- use data constructors and variables to capture sub-expressions
+- variables (e.g. ***_*** or ***a***) match anything
+
+---
+
+#Foo
+
+.left-column[
+```scala
+def tellMeScala(i: Int): String = i match {
+  case 1 => "one"
+  case 2 => "two"
+  case _ => "dunno"
+}
+```
+]
+.right-column[
+```scala
+def tellMeScala(i: Int): String = i match {
+  case 1 => "one"
+  case 2 => "two"
+  case _ => "dunno"
+}
+```
+]
 
 ---
 class: center
