added link to slides on front page

--- a/20150519-FP_chapter3/slides/traits.html
+++ b/20150519-FP_chapter3/slides/traits.html
@@ -21,9 +21,12 @@ h1, h2, h3 {
 
 class: middle, center, inverse
 
-# Scala Study Group
+## Scala Study Group
 ## 2015-05-19
-## Chapter 3 - A short look on <code>Trait</code>s
+# Chapter 3 - A short look on <code>Trait</code>s
+
+
+##### https://rheinmainscala.github.io/meetups/20150519-FP_chapter3/slides/traits.html
 
 ---
 class: left
