--- a/20150519-FP_chapter3/slides/traits.html
+++ b/20150519-FP_chapter3/slides/traits.html
@@ -21,8 +21,8 @@ h1, h2, h3 {
 
 class: middle, center, inverse
 
-## Scala Study Group
-## 2015-05-19
+# Scala Study Group
+# 2015-05-19
 # Chapter 3 - A short look on <code>Trait</code>s
 
 
